--- a/locales/es_ES.po
+++ b/locales/es_ES.po
@@ -3,68 +3,70 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Le Rohellec Benoit <blerohellec@hotmail.com>, 2015
 # Xavier CAILLAUD <tsmr@thetsmr.fr>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-02-19 15:53+0100\n"
-"PO-Revision-Date: 2013-11-20 09:37+0000\n"
+"POT-Creation-Date: 2015-11-26 10:27+0100\n"
+"PO-Revision-Date: 2015-11-26 09:28+0000\n"
 "Last-Translator: Xavier CAILLAUD <tsmr@thetsmr.fr>\n"
-"Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/GLPI_domains/language/es_ES/)\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.com/tsmr/GLPI_domains/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: hook.php:329 inc/domain.class.php:785 inc/domain_item.class.php:509
+#: hook.php:369 inc/domain_item.class.php:505
 msgid "Does not expire"
-msgstr ""
+msgstr "No caduca nunca"
 
-#: hook.php:392 inc/domain_item.class.php:427
+#: hook.php:433 inc/domain_item.class.php:423
 msgid "Associate a domain"
-msgstr ""
+msgstr "Asociar un dominio"
 
-#: setup.php:109 inc/domain.class.php:43
+#: setup.php:86 inc/domain.class.php:46 inc/menu.class.php:35
+#: inc/profile.class.php:145
 msgid "Domain"
 msgid_plural "Domains"
 msgstr[0] "Dominio"
 msgstr[1] "Dominios"
 
-#: setup.php:123
-msgid "This plugin requires GLPI >= 0.84"
+#: setup.php:100
+msgid "This plugin requires GLPI >= 0.85"
 msgstr ""
 
 #: inc/config.class.php:39
 msgid "Plugin Setup"
-msgstr ""
+msgstr "Configuración del plugin"
 
 #: inc/config.class.php:64
 msgid "Time of checking of validity of domains"
-msgstr ""
+msgstr "Período de comprobación de validez de los dominios"
 
-#: inc/config.class.php:73 inc/domain.class.php:466
+#: inc/config.class.php:73 inc/domain.class.php:618
 msgid "Domains expired since more"
-msgstr ""
+msgstr "Dominios caducados desde más de"
 
 #: inc/config.class.php:77
 msgid "Domains expiring in less than"
-msgstr ""
+msgstr "Dominios que van a caducar en menos de"
 
-#: inc/domain.class.php:280
+#: inc/domain.class.php:268
 msgid "Empty for infinite"
-msgstr ""
+msgstr "vacío para infinito"
 
-#: inc/domain.class.php:394 inc/notificationtargetdomain.class.php:75
+#: inc/domain.class.php:544 inc/notificationtargetdomain.class.php:75
 msgid "Expired or expiring domains"
-msgstr ""
+msgstr "Dominios caducados o que van a caducar"
 
 #: inc/domaintype.class.php:39
 msgid "Domain type"
 msgid_plural "Domain types"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Tipo de dominio"
+msgstr[1] "Tipos de dominio"
 
 #: inc/notificationtargetdomain.class.php:38
 #: inc/notificationtargetdomain.class.php:49
@@ -74,8 +76,4 @@ msgstr "Dominios caducados"
 #: inc/notificationtargetdomain.class.php:39
 #: inc/notificationtargetdomain.class.php:50
 msgid "Expiring domains"
-msgstr ""
-
-#: inc/profile.class.php:37 inc/profile.class.php:141
-msgid "Rights management"
-msgstr ""
+msgstr "Dominios que van a caducar"
