--- a/locales/tr_TR.po
+++ b/locales/tr_TR.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-26 10:27+0100\n"
-"PO-Revision-Date: 2015-11-26 09:28+0000\n"
-"Last-Translator: Xavier CAILLAUD <tsmr@thetsmr.fr>\n"
+"PO-Revision-Date: 2015-11-27 15:03+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/tsmr/GLPI_domains/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +35,7 @@ msgstr[0] "Etki alanları"
 
 #: setup.php:100
 msgid "This plugin requires GLPI >= 0.85"
-msgstr ""
+msgstr "Bu uygulama eki GLPI 0.85 sürümü ve üzeriyle çalışır"
 
 #: inc/config.class.php:39
 msgid "Plugin Setup"
