--- a/locales/fr_FR.po
+++ b/locales/fr_FR.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Xavier CAILLAUD <tsmr@thetsmr.fr>, 2013,2015
+# Xavier CAILLAUD <thetsmr@gmail.com>, 2013,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-26 10:27+0100\n"
-"PO-Revision-Date: 2015-11-26 09:28+0000\n"
-"Last-Translator: Xavier CAILLAUD <tsmr@thetsmr.fr>\n"
+"PO-Revision-Date: 2016-11-09 15:56+0000\n"
+"Last-Translator: Xavier CAILLAUD <thetsmr@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/tsmr/GLPI_domains/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
