--- a/locales/it_IT.po
+++ b/locales/it_IT.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Xavier CAILLAUD <tsmr@thetsmr.fr>, 2013
+# Xavier CAILLAUD <thetsmr@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
