--- a/locales/cs_CZ.po
+++ b/locales/cs_CZ.po
@@ -3,8 +3,8 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Amandine Manceau, 2017
-# Xavier CAILLAUD <thetsmr@gmail.com>, 2013,2015
+# David Stepan <stepand@tiscali.cz>, 2015
+# Ondrej Krejcik <ondra@tachec.org>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
@@ -12,64 +12,66 @@ msgstr ""
 "POT-Creation-Date: 2017-10-10 09:06+0200\n"
 "PO-Revision-Date: 2017-10-10 07:21+0000\n"
 "Last-Translator: Amandine Manceau\n"
-"Language-Team: French (France) (http://www.transifex.com/tsmr/GLPI_domains/language/fr_FR/)\n"
+"Language-Team: Czech (Czech Republic) (http://www.transifex.com/tsmr/GLPI_domains/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: cs_CZ\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: hook.php:424 inc/domain.class.php:912 inc/domain_item.class.php:563
 msgid "Does not expire"
-msgstr "N'expire pas"
+msgstr "bez expirace"
 
 #: hook.php:493 inc/domain_item.class.php:481
 msgid "Associate a domain"
-msgstr "Associer un domaine"
+msgstr "Přiřadit doménu"
 
 #: setup.php:94 inc/domain.class.php:54 inc/menu.class.php:43
 #: inc/profile.class.php:175
 msgid "Domain"
 msgid_plural "Domains"
-msgstr[0] "Domaine"
-msgstr[1] "Domaines"
+msgstr[0] "Doména"
+msgstr[1] "Domény"
+msgstr[2] "Domén"
 
 #: inc/config.class.php:49
 msgid "Plugin Setup"
-msgstr "Configuration du plugin"
+msgstr "Nastavení pluginu"
 
 #: inc/config.class.php:86
 msgid "Time of checking of validity of domains"
-msgstr "Délai de vérification de validité des domaines"
+msgstr "Časové období kontroly platnosti domén"
 
 #: inc/config.class.php:95 inc/domain.class.php:708
 msgid "Domains expired since more"
-msgstr "Domaines expirés depuis plus de"
+msgstr "Domény, jejichž platnost vypršela za předchozích"
 
 #: inc/config.class.php:99
 msgid "Domains expiring in less than"
-msgstr "Domaines  qui vont expirer dans moins de"
+msgstr "Domény, jejichž platnost vyprší v období následujících"
 
 #: inc/domain.class.php:326
 msgid "Empty for infinite"
-msgstr "Vide pour infini"
+msgstr "Prázdné pro nekonečno"
 
 #: inc/domain.class.php:628 inc/notificationtargetdomain.class.php:86
 msgid "Expired or expiring domains"
-msgstr "Domaines expirés ou domaines qui vont expirer"
+msgstr "Prošlá nebo právě procházející platnost domén"
 
 #: inc/domaintype.class.php:48
 msgid "Domain type"
 msgid_plural "Domain types"
-msgstr[0] "Type de domaine"
-msgstr[1] "Types de domaine"
+msgstr[0] "Typ domény"
+msgstr[1] "Typy domén"
+msgstr[2] "Typů domén"
 
 #: inc/notificationtargetdomain.class.php:43
 #: inc/notificationtargetdomain.class.php:57
 msgid "Expired domains"
-msgstr "Domaines expirés"
+msgstr "Domény s prošlou platností"
 
 #: inc/notificationtargetdomain.class.php:44
 #: inc/notificationtargetdomain.class.php:58
 msgid "Expiring domains"
-msgstr "Domaines  qui vont expirer"
+msgstr "Domény s právě procházející platností"
