--- a/locales/en_US.po
+++ b/locales/en_US.po
@@ -3,8 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Amandine Manceau, 2017
-# Xavier CAILLAUD <thetsmr@gmail.com>, 2013,2015
+# Shawn Long <webaccounts@kkg.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
@@ -12,64 +11,64 @@ msgstr ""
 "POT-Creation-Date: 2017-10-10 09:06+0200\n"
 "PO-Revision-Date: 2017-10-10 07:21+0000\n"
 "Last-Translator: Amandine Manceau\n"
-"Language-Team: French (France) (http://www.transifex.com/tsmr/GLPI_domains/language/fr_FR/)\n"
+"Language-Team: English (United States) (http://www.transifex.com/tsmr/GLPI_domains/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: en_US\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: hook.php:424 inc/domain.class.php:912 inc/domain_item.class.php:563
 msgid "Does not expire"
-msgstr "N'expire pas"
+msgstr "Does not expire"
 
 #: hook.php:493 inc/domain_item.class.php:481
 msgid "Associate a domain"
-msgstr "Associer un domaine"
+msgstr "Associate a domain"
 
 #: setup.php:94 inc/domain.class.php:54 inc/menu.class.php:43
 #: inc/profile.class.php:175
 msgid "Domain"
 msgid_plural "Domains"
-msgstr[0] "Domaine"
-msgstr[1] "Domaines"
+msgstr[0] "Domain"
+msgstr[1] "Domains"
 
 #: inc/config.class.php:49
 msgid "Plugin Setup"
-msgstr "Configuration du plugin"
+msgstr "Plugin Setup"
 
 #: inc/config.class.php:86
 msgid "Time of checking of validity of domains"
-msgstr "Délai de vérification de validité des domaines"
+msgstr "Time of checking of validity of domains"
 
 #: inc/config.class.php:95 inc/domain.class.php:708
 msgid "Domains expired since more"
-msgstr "Domaines expirés depuis plus de"
+msgstr "Domains expired since more"
 
 #: inc/config.class.php:99
 msgid "Domains expiring in less than"
-msgstr "Domaines  qui vont expirer dans moins de"
+msgstr "Domains expiring in less than"
 
 #: inc/domain.class.php:326
 msgid "Empty for infinite"
-msgstr "Vide pour infini"
+msgstr "Empty for infinite"
 
 #: inc/domain.class.php:628 inc/notificationtargetdomain.class.php:86
 msgid "Expired or expiring domains"
-msgstr "Domaines expirés ou domaines qui vont expirer"
+msgstr "Expired or domains expiring soon"
 
 #: inc/domaintype.class.php:48
 msgid "Domain type"
 msgid_plural "Domain types"
-msgstr[0] "Type de domaine"
-msgstr[1] "Types de domaine"
+msgstr[0] "Domain type"
+msgstr[1] "Domain types"
 
 #: inc/notificationtargetdomain.class.php:43
 #: inc/notificationtargetdomain.class.php:57
 msgid "Expired domains"
-msgstr "Domaines expirés"
+msgstr "Expired domains"
 
 #: inc/notificationtargetdomain.class.php:44
 #: inc/notificationtargetdomain.class.php:58
 msgid "Expiring domains"
-msgstr "Domaines  qui vont expirer"
+msgstr "Expiring domains"
