--- a/locales/pt_BR.po
+++ b/locales/pt_BR.po
@@ -3,8 +3,8 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Amandine Manceau, 2017
-# Xavier CAILLAUD <thetsmr@gmail.com>, 2013,2015
+# Matthieu Hal, 2017
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
@@ -12,64 +12,64 @@ msgstr ""
 "POT-Creation-Date: 2017-10-10 09:06+0200\n"
 "PO-Revision-Date: 2017-10-10 07:21+0000\n"
 "Last-Translator: Amandine Manceau\n"
-"Language-Team: French (France) (http://www.transifex.com/tsmr/GLPI_domains/language/fr_FR/)\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/tsmr/GLPI_domains/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
+"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: hook.php:424 inc/domain.class.php:912 inc/domain_item.class.php:563
 msgid "Does not expire"
-msgstr "N'expire pas"
+msgstr "Não expira"
 
 #: hook.php:493 inc/domain_item.class.php:481
 msgid "Associate a domain"
-msgstr "Associer un domaine"
+msgstr "Associar um domínio"
 
 #: setup.php:94 inc/domain.class.php:54 inc/menu.class.php:43
 #: inc/profile.class.php:175
 msgid "Domain"
 msgid_plural "Domains"
-msgstr[0] "Domaine"
-msgstr[1] "Domaines"
+msgstr[0] "Domínio"
+msgstr[1] "Domínios"
 
 #: inc/config.class.php:49
 msgid "Plugin Setup"
-msgstr "Configuration du plugin"
+msgstr "Configuração do plug-in"
 
 #: inc/config.class.php:86
 msgid "Time of checking of validity of domains"
-msgstr "Délai de vérification de validité des domaines"
+msgstr "Intervalo entre verificação de validade dos domínios"
 
 #: inc/config.class.php:95 inc/domain.class.php:708
 msgid "Domains expired since more"
-msgstr "Domaines expirés depuis plus de"
+msgstr "Domínios expirados a mais de"
 
 #: inc/config.class.php:99
 msgid "Domains expiring in less than"
-msgstr "Domaines  qui vont expirer dans moins de"
+msgstr "Domínios expirando em menos de"
 
 #: inc/domain.class.php:326
 msgid "Empty for infinite"
-msgstr "Vide pour infini"
+msgstr "Vazio para infinito"
 
 #: inc/domain.class.php:628 inc/notificationtargetdomain.class.php:86
 msgid "Expired or expiring domains"
-msgstr "Domaines expirés ou domaines qui vont expirer"
+msgstr "Domínios expirando ou expirados"
 
 #: inc/domaintype.class.php:48
 msgid "Domain type"
 msgid_plural "Domain types"
-msgstr[0] "Type de domaine"
-msgstr[1] "Types de domaine"
+msgstr[0] "Tipos de domínio"
+msgstr[1] "Tipo de domínios"
 
 #: inc/notificationtargetdomain.class.php:43
 #: inc/notificationtargetdomain.class.php:57
 msgid "Expired domains"
-msgstr "Domaines expirés"
+msgstr "Domínios expirados"
 
 #: inc/notificationtargetdomain.class.php:44
 #: inc/notificationtargetdomain.class.php:58
 msgid "Expiring domains"
-msgstr "Domaines  qui vont expirer"
+msgstr "Domínios expirando"
