--- a/locales/ru_RU.po
+++ b/locales/ru_RU.po
@@ -3,8 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Amandine Manceau, 2017
-# Xavier CAILLAUD <thetsmr@gmail.com>, 2013,2015
+# Nemo Nigil <nnigil@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
@@ -12,64 +11,68 @@ msgstr ""
 "POT-Creation-Date: 2017-10-10 09:06+0200\n"
 "PO-Revision-Date: 2017-10-10 07:21+0000\n"
 "Last-Translator: Amandine Manceau\n"
-"Language-Team: French (France) (http://www.transifex.com/tsmr/GLPI_domains/language/fr_FR/)\n"
+"Language-Team: Russian (Russia) (http://www.transifex.com/tsmr/GLPI_domains/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: hook.php:424 inc/domain.class.php:912 inc/domain_item.class.php:563
 msgid "Does not expire"
-msgstr "N'expire pas"
+msgstr "Не законченный срок"
 
 #: hook.php:493 inc/domain_item.class.php:481
 msgid "Associate a domain"
-msgstr "Associer un domaine"
+msgstr "Привязать к домену"
 
 #: setup.php:94 inc/domain.class.php:54 inc/menu.class.php:43
 #: inc/profile.class.php:175
 msgid "Domain"
 msgid_plural "Domains"
-msgstr[0] "Domaine"
-msgstr[1] "Domaines"
+msgstr[0] "Домен"
+msgstr[1] "Домены"
+msgstr[2] ""
+msgstr[3] ""
 
 #: inc/config.class.php:49
 msgid "Plugin Setup"
-msgstr "Configuration du plugin"
+msgstr "Настройки плагина"
 
 #: inc/config.class.php:86
 msgid "Time of checking of validity of domains"
-msgstr "Délai de vérification de validité des domaines"
+msgstr "Время проверки доступности домена"
 
 #: inc/config.class.php:95 inc/domain.class.php:708
 msgid "Domains expired since more"
-msgstr "Domaines expirés depuis plus de"
+msgstr "Срок домена истек более"
 
 #: inc/config.class.php:99
 msgid "Domains expiring in less than"
-msgstr "Domaines  qui vont expirer dans moins de"
+msgstr "Срок домена истечет"
 
 #: inc/domain.class.php:326
 msgid "Empty for infinite"
-msgstr "Vide pour infini"
+msgstr "Для неопределенных"
 
 #: inc/domain.class.php:628 inc/notificationtargetdomain.class.php:86
 msgid "Expired or expiring domains"
-msgstr "Domaines expirés ou domaines qui vont expirer"
+msgstr "Истеченые или истекающие сроки действия домена"
 
 #: inc/domaintype.class.php:48
 msgid "Domain type"
 msgid_plural "Domain types"
-msgstr[0] "Type de domaine"
-msgstr[1] "Types de domaine"
+msgstr[0] "Тип домена"
+msgstr[1] "Типы домена"
+msgstr[2] ""
+msgstr[3] ""
 
 #: inc/notificationtargetdomain.class.php:43
 #: inc/notificationtargetdomain.class.php:57
 msgid "Expired domains"
-msgstr "Domaines expirés"
+msgstr "Домены с истекающим сроком"
 
 #: inc/notificationtargetdomain.class.php:44
 #: inc/notificationtargetdomain.class.php:58
 msgid "Expiring domains"
-msgstr "Domaines  qui vont expirer"
+msgstr "Освобождающиеся домены"
