--- a/locales/en_US.po
+++ b/locales/en_US.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the GLPI - Domains plugin package.
 # 
 # Translators:
-# Shawn Long <webaccounts@kkg.org>, 2017
+# Shawn Long <webaccounts@kkg.org>, 2017,2019
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI Project - domains plugin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-03 07:58+0200\n"
-"PO-Revision-Date: 2017-10-10 07:21+0000\n"
-"Last-Translator: Amandine Manceau\n"
+"PO-Revision-Date: 2019-02-07 13:25+0000\n"
+"Last-Translator: Shawn Long <webaccounts@kkg.org>\n"
 "Language-Team: English (United States) (http://www.transifex.com/tsmr/GLPI_domains/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr "Does not expire"
 
 #: hook.php:504 inc/domain_item.class.php:483
 msgid "Associate a domain"
-msgstr "Associate a domain"
+msgstr "Associate a Domain"
 
 #: setup.php:94 inc/domain.class.php:54 inc/menu.class.php:42
 #: inc/profile.class.php:175
@@ -55,20 +55,20 @@ msgstr "Empty for infinite"
 
 #: inc/domain.class.php:684 inc/notificationtargetdomain.class.php:86
 msgid "Expired or expiring domains"
-msgstr "Expired or domains expiring soon"
+msgstr "Expired or Domains expiring soon"
 
 #: inc/domaintype.class.php:47
 msgid "Domain type"
 msgid_plural "Domain types"
 msgstr[0] "Domain type"
-msgstr[1] "Domain types"
+msgstr[1] "Domain Types"
 
 #: inc/notificationtargetdomain.class.php:43
 #: inc/notificationtargetdomain.class.php:57
 msgid "Expired domains"
-msgstr "Expired domains"
+msgstr "Expired Domains"
 
 #: inc/notificationtargetdomain.class.php:44
 #: inc/notificationtargetdomain.class.php:58
 msgid "Expiring domains"
-msgstr "Expiring domains"
+msgstr "Expiring Domains"
